base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-www
spec:
  redirectRegex:
    regex: "^https?://cliet-tableaux.fr/(.*)"
    replacement: "https://www.cliet-tableaux.fr/${1}"
    permanent: true

---

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
